src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/InputInvalidJavadocPosition2[InputInvalidJavadocPosition]#method22().mjava
    void method22(/** violation */) {}

